Mobile view updation

--- a/index.html
+++ b/index.html
@@ -383,29 +383,35 @@
     <div>
       <div>
         <img
-          src="/images/SECTION 2/Circle.png"
-          class="absolute"
-          style="height: 70vh; left: -15vw; top: 70vh; z-index: -12"
+          src="/images/SECTION 1/Large Circle shape 1.png"
+          class="absolute large-circle-shape-1"
+          style="height: 70vh; left: 0vw; top: 70vh; z-index: -12"
           alt=""
         />
 
         <img
-          src="/images/SECTION 2/Circle.png"
-          class="relative"
+          src="/images/SECTION 1/Small Circle shape 2 .png"
+          class="relative circle-shape-2"
           style="height: 15vh; left: 6vw; top: 0vh; z-index: 12"
           alt=""
         />
 
         <img
           src="/images/SECTION 2/Circle.png"
-          class="absolute"
+          class="absolute right-circle"
           style="height: 28vh; right: 15vw; top: 70vh; z-index: 12"
+          alt=""
+        />
+        <img
+          src="/images/SECTION 1/Circle shape 4.png"
+          class="absolute right-circle-2"
+          style="height: 28vh; top: 70vh; z-index: 12"
           alt=""
         />
       </div>
       <img
         src="/images/SECTION 1/Circle shape 4.png"
-        class="absolute"
+        class="absolute large-circle"
         style="
           height: 60vh;
           right: 0vw;
@@ -457,17 +463,17 @@
     </div>
 
     <div
-      class="flex flex-col items-center justify-center text-center mt-20 p-20"
+      class="flex flex-col items-center justify-center text-center mt-20 p-20 empowering-main"
       style="
         border: 1px solid #f0f4f4;
         border-radius: 20px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       "
     >
-      <div class="text-5xl font-bold mb-4" style="color: #003638; width: 50%">
+      <div class="text-5xl font-bold mb-4 empowering" style="color: #003638; width: 50%">
         <h1>Empowering Future Innovators</h1>
       </div>
-      <div class="text-lg text-gray-700 mb-8 mt-5" style="width: 60%">
+      <div class="text-lg text-gray-700 mb-8 mt-5 empowering-desc" style="width: 60%">
         <p>
           ATLAB is where technology meets imagination. As a leader in hands-on
           education solutions, we equip students, teachers, and institutions
