New Things Updated

--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
           position: relative;
           object-fit: cover;
         "
+        class="main-image"
       />
       <div class="main-container">
         <div class="content-card">
@@ -491,9 +492,9 @@ position: relative;">K-12 Education</div>
     </div>
 
     <div id="section1" class="context active" >
-      <div class="flex flex-row justify-between items-center mt-10">
-        <div class="pl-32 flex flex-col" style="width: 70%">
-          <div class="flex flex-row">
+      <div class="flex flex-row justify-between items-center mt-10 k-12">
+        <div class="pl-32 flex flex-col k-12-main" style="width: 70%">
+          <div class="flex flex-row k-12-header">
             <div>
               <span class="text-4xl font-bold mr-8" style="width: 20%"
                 >K-12 <br />
@@ -508,23 +509,25 @@ position: relative;">K-12 Education</div>
             </div>
           </div>
       
-          <p style="width: 50%; margin-bottom: 50px">
+          <p style="width: 50%; margin-bottom: 50px" class="k-12-desc">
             Engage every student with hands-on K-12 solutions that bring STEM,
             AI, Coding and creativity to life
           </p>
         </div>
-        <div class="flex" style="width: 30%">
+        <div class="flex k-12-man-image" style="width: 30%">
           <img
             src="https://assets.onecompiler.app/43ktx49g5/43ktx4dxy/Circle.png"
+            class="k-12-image-1"
             style="width: 12vw"
             alt=""
           />
+          <img src="/images/new/k-12-main-image.png" class="k-12-image-2" alt="">
         </div>
       </div>
 
-      <div class="pl-32 flex">
+      <div class="pl-32 flex activeity-cards">
         <div
-          class="gird gap-4 text-white"
+          class="gird gap-4 text-white k-12-cards-grid"
           style="
             display: grid;
             grid-template-columns: repeat(3, 1fr);
@@ -721,6 +724,7 @@ position: relative;">K-12 Education</div>
             src="/images/SECTION 2/K12 Main image.png"
             style="width: 30vw"
             alt=""
+            class="k-12-image-1"
           />
         </div>
       </div>
@@ -1207,17 +1211,17 @@ position: relative;">K-12 Education</div>
       </div>
     </div>
 
-    <div class="pl-32">
-      <h1 style="" class="text-4xl font-bold mb-10">
+    <div class="pl-32 power-header">
+      <h1 style="" class="text-4xl font-bold mb-10 power-head">
         You Power Education. We Power You.
       </h1>
-      <p class="text-sm mb-20">
+      <p class="text-sm mb-20 power-header-desc">
         Whether you are an educator, instructor, or faculty - ATLAB <br />
         offers tailored solutions that empower every step of the <br />
         educational journey.
       </p>
     </div>
-    <div class="flex flex-row justify-center items-center gap-1">
+    <div class="flex flex-row justify-center items-center gap-1 power-education">
       <div class="flex flex-col justify-center items-center">
         <img
           src="/images/section 4/Sec 4_ Image 1.png"
@@ -1627,11 +1631,10 @@ position: relative;">K-12 Education</div>
         <div class="story-card">
           <div class="image-container">
             <img
-              src="images\Section 9\photo1.JPG"
+              src="images/new/photo1.JPG"
               alt="Teacher with children"
               class="story-image"
             />
-            <div class="date-badge">08 Mar</div>
           </div>
           <div class="story-content">
             <h3 class="story-title">Lorem ipsum dolor sit amet, consectetur</h3>
@@ -1642,7 +1645,7 @@ position: relative;">K-12 Education</div>
             </p>
             <a href="#" class="read-more-btn">
               Read More
-              <span class="arrow-icon">→</span>
+              <span class="arrow-icon ml-10">→</span>
             </a>
           </div>
         </div>
@@ -1650,11 +1653,10 @@ position: relative;">K-12 Education</div>
         <div class="story-card">
           <div class="image-container">
             <img
-              src="images\Section 9\photo2.JPG"
+              src="images/new/photo2.JPG"
               alt="Mother and child learning"
               class="story-image"
             />
-            <div class="date-badge">08 Mar</div>
           </div>
           <div class="story-content">
             <h3 class="story-title">Lorem ipsum dolor sit amet, consectetur</h3>
@@ -1665,7 +1667,7 @@ position: relative;">K-12 Education</div>
             </p>
             <a href="#" class="read-more-btn">
               Read More
-              <span class="arrow-icon">→</span>
+              <span class="arrow-icon ml-10">→</span>
             </a>
           </div>
         </div>
@@ -1673,11 +1675,10 @@ position: relative;">K-12 Education</div>
         <div class="story-card">
           <div class="image-container">
             <img
-              src="images\Section 9\photo3.JPG"
+              src="images/new/photo3.JPG"
               alt="Children playing outdoors"
               class="story-image"
             />
-            <div class="date-badge">08 Mar</div>
           </div>
           <div class="story-content">
             <h3 class="story-title">Lorem ipsum dolor sit amet, consectetur</h3>
@@ -1688,7 +1689,7 @@ position: relative;">K-12 Education</div>
             </p>
             <a href="#" class="read-more-btn">
               Read More
-              <span class="arrow-icon">→</span>
+              <span class="arrow-icon ml-10">→</span>
             </a>
           </div>
         </div>
