New Updates made

--- a/index.html
+++ b/index.html
@@ -1257,9 +1257,9 @@
     </div> -->
 
     <div class="relative new-atlab-trust">
-      <img src="/images/atlab-mobile.png" alt="" />
+      <img src="/images/atlab-mobile.png" style="height: 40vh; width: 100%" alt="" />
       <div class="relative atlab-carousel">
-        <div class="content-slider" style="position: relative; overflow: hidden; width: 40vw">
+        <div class="content-slider" style="position: relative; overflow: hidden; width: 50vw">
           >
           <div class="slides-wrapper-a" style="width: 600%">
             <!-- Slide 1 -->
