--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
       </div>
     </div>
 
-    <div class="circle-section">
+   <div class="circle-section">
       <div>
         <img
           src="/images/SECTION 1/Large Circle shape 1.png"
@@ -1142,7 +1142,7 @@
             src="images/new/hafele.png"
             alt="Our Partners Logos"
             class="partners-logos-image"
-          />
+          /> 
         </div>
       </div>
     </div>
@@ -1256,7 +1256,7 @@
       </div>
     </div> -->
 
-    <div class="relative new-atlab-trust">
+     <div class="relative new-atlab-trust">
       <img src="/images/atlab-mobile.png" style="height: 40vh; width: 100%" alt="" />
       <div class="relative atlab-carousel">
         <div class="content-slider" style="position: relative; overflow: hidden; width: 50vw">
@@ -1376,7 +1376,7 @@
     </div>
 
     <div class="pl-32 power-header">
-      <h1  class="text-4xl font-bold mb-10 power-head">
+      <h1 class="text-4xl font-bold mb-10 power-head">
         You Power Education. We Power You.
       </h1>
       <p class="text-sm mb-20 power-header-desc">
@@ -1801,7 +1801,7 @@
         <div class="story-card">
           <div class="image-container">
             <img
-              src="images/new/photo1.JPG"
+              src="images\Section 9\photo1.JPG"
               alt="Teacher with children"
               class="story-image"
             />
@@ -1823,7 +1823,7 @@
         <div class="story-card">
           <div class="image-container">
             <img
-              src="images/new/photo2.JPG"
+              src="images\Section 9\photo2.JPG"
               alt="Mother and child learning"
               class="story-image"
             />
@@ -1845,7 +1845,7 @@
         <div class="story-card">
           <div class="image-container">
             <img
-              src="images/new/photo3.JPG"
+              src="images\Section 9\photo3.JPG"
               alt="Children playing outdoors"
               class="story-image"
             />
@@ -1966,11 +1966,12 @@
 
     <!-- Footer -->
     <footer class="site-footer">
-      <img src="images\Footer\Footer.png" style="width: 100%; height: 620px" />
+      <img src="images/Footer/Footer.png" style="width: 100%; height: 620px" />
       <div class="footer-grid">
+        <!-- Left Column -->
         <div class="footer-col about-us">
           <img
-            src="images\SECTION 1\Atlab logo.png"
+            src="images/SECTION 1/Atlab logo.png"
             alt="ATLAB Logo"
             class="footer-logo"
           />
@@ -1981,107 +1982,158 @@
             STEM, robotics, AI, and immersive<br />
             technologies.
           </p>
-        </div>
-        <div class="footer-col get-in-touch">
-          <h3>Get In Touch</h3>
-          <p style="margin-left: -40px; font-size: 13px">Atlab Trading LLC</p>
-          <p
-            style="
-              margin-left: -40px;
-              margin-top: -19px;
-              font-size: 13px;
-              margin-top: 2px;
-            "
-          >
-            Ahmad Mustafa Hasan Ahl Compound,<br />Office No 19 Al Qusais
-            Industrial,<br />Dubai, United Arab Emirates.
-          </p>
-          <p style="margin-left: -40px; font-size: 13px; margin-top: 20px">
-            +971 4 3880008
-          </p>
-          <p style="margin-left: -40px; font-size: 13px; margin-top: 20px">
-            <a href="mailto:enquiry.atlab@centena.com"
-              >enquiry.atlab@centena.com</a
-            >
-          </p>
-        </div>
-        <div class="footer-col our-solutions" style="margin-left: -40px">
-          <h3>Our Solutions</h3>
-          <ul style="margin-left: -40px; line-height: 1; font-size: 13px">
-            <li><a href="#">&#9632; K-12 Education</a></li>
-            <li><a href="#">&#9632; Higher Education</a></li>
-            <li><a href="#">&#9632; Biomedical Solutions</a></li>
-          </ul>
-        </div>
-        <div class="footer-col useful-links" style="margin-left: -70px">
-          <h3>Useful Links</h3>
-          <ul style="margin-left: -40px; line-height: 1; font-size: 13px">
-            <li><a href="#">&#9632; Home</a></li>
-            <li><a href="#">&#9632; About</a></li>
-            <li><a href="#">&#9632; Group Companies</a></li>
-            <li><a href="#">&#9632; Blogs</a></li>
-            <li><a href="#">&#9632; Privacy Policy</a></li>
-            <li><a href="#">&#9632; Terms & Conditions</a></li>
-            <li><a href="#">&#9632; Sitemap</a></li>
-            <li><a href="#">&#9632; Careers</a></li>
-          </ul>
-        </div>
-        <div class="footer-col group-companies" style="margin-left: -110px">
-          <h3>Group Companies</h3>
-          <ul style="margin-left: -40px; line-height: 1; font-size: 13px">
-            <li><a href="#">&#9632; Marine</a></li>
-            <li><a href="#">&#9632; Analytical</a></li>
-            <li><a href="#">&#9632; Industrial</a></li>
-            <li><a href="#">&#9632; Security</a></li>
-            <li><a href="#">&#9632; LabSpace</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <div class="certifications">
-          <img
-            src="images\Footer\Great Place to work logo.png"
-            alt="Great Place To Work"
-            class="certification-img"
-            style="width: 90px; margin-top: 10px"
-          />
-          <div>
+
+          <!-- Logos and Subscribe -->
+          <div class="footer-logos">
             <img
-              src="images\Footer\Centena logo.png"
-              alt="Centena Group"
-              class="certification-img"
-              style="width: 150px; margin-left: 15px; margin-bottom: 30px"
+              src="images/Footer/Great Place to work logo.png"
+              alt="Great Place To Work"
+              class="footer-badge"
             />
-            <div class="subscribe-">
-              <button class="subscribe-btn" style="width: 12vw">
-                Subscribe for Latest Updates!
-                <svg class="plane-icon" viewBox="0 0 24 24">
-                  <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z" />
-                </svg>
-              </button>
+            <img
+              src="images/Footer/Centena logo.png"
+              alt="Centena Logo"
+              class="footer-badge"
+              style="height: 40px; margin-top: -40px"
+            />
+          </div>
+          <button class="subscribe-btn">
+            Subscribe for Latest Updates!
+            <svg class="plane-icon" viewBox="0 0 24 24">
+              <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z" />
+            </svg>
+          </button>
+        </div>
+
+        <!-- Right Column -->
+        <div class="footer-right">
+          <!-- Get in Touch -->
+          <div class="footer-col get-in-touch">
+            <h3>Get In Touch</h3>
+            <p class="small-text">Atlab Trading LLC</p>
+            <p class="small-text">
+              Ahmad Mustafa Hasan Ahl Compound,<br />Office No 19 Al Qusais
+              Industrial,<br />Dubai, United Arab Emirates.
+            </p>
+            <p class="small-text" style="margin-top: 20px">+971 4 3880008</p>
+            <p class="small-text" style="margin-top: 20px">
+              <a href="mailto:enquiry.atlab@centena.com"
+                >enquiry.atlab@centena.com</a
+              >
+            </p>
+          </div>
+
+          <!-- Subcolumns -->
+          <div class="footer-subcolumns">
+            <!-- Subcolumn 1 -->
+            <div class="footer-subcol">
+              <div class="footer-col our-solutions">
+                <h4>Our Solutions</h4>
+                <ul class="small-text square-list">
+                  <li><a href="#">K-12 Education</a></li>
+                  <li><a href="#">Higher Education</a></li>
+                  <li><a href="#">Biomedical Solutions</a></li>
+                </ul>
+              </div>
+              <div class="footer-col group-companies">
+                <h4>Group Companies</h4>
+                <ul class="small-text square-list">
+                  <li><a href="#">Marine</a></li>
+                  <li><a href="#">Analytical</a></li>
+                  <li><a href="#">Industrial</a></li>
+                  <li><a href="#">Security</a></li>
+                  <li><a href="#">LabSpace</a></li>
+                </ul>
+              </div>
+            </div>
+
+            <!-- Subcolumn 2 -->
+            <div class="footer-subcol">
+              <div class="footer-col useful-links">
+                <h4>Useful Links</h4>
+                <ul class="small-text square-list">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Group Companies</a></li>
+                  <li><a href="#">Blogs</a></li>
+                  <li><a href="#">Privacy Policy</a></li>
+                  <li><a href="#">Terms & Conditions</a></li>
+                  <li><a href="#">Sitemap</a></li>
+                  <li><a href="#">Careers</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
+      </div>
 
+      <!-- Bottom Info -->
+      <div class="footer-bottom">
         <div class="footer-info-row">
-          <div class="certified" style="margin-top: 40px">
+          <div class="certified">
             <h4>Certified</h4>
             <p>ISO 14001:2015, ISO 45001:2018, ISO 9001:2015</p>
           </div>
-          <div class="global-presence" style="margin-top: 40px">
+          <div class="global-presence">
             <h4>Global Presence</h4>
             <p>UAE | Kuwait | Qatar | Oman | Saudi Arabia</p>
           </div>
         </div>
       </div>
+
+      <!-- Footer Credits -->
       <div class="footer-credits">
         <p>Copyright © 2025 ATLAB. ALL Rights Reserved.</p>
-        <img
-          src="images\Footer\SM icon.png"
-          alt="Social Media Icon"
-          class="social-icons"
-          style="margin-top: -14px; width: 100px; margin-right: 140px"
-        />
+        <div class="social-icons">
+          <a
+            href="https://facebook.com/yourpage"
+            class="social-icon facebook"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg viewBox="0 0 24 24">
+              <path
+                d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"
+              />
+            </svg>
+          </a>
+          <a
+            href="https://twitter.com/yourhandle"
+            class="social-icon twitter"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg viewBox="0 0 24 24">
+              <path
+                d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"
+              />
+            </svg>
+          </a>
+          <a
+            href="https://linkedin.com/company/yourcompany"
+            class="social-icon linkedin"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg viewBox="0 0 24 24">
+              <path
+                d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+              />
+            </svg>
+          </a>
+          <a
+            href="https://instagram.com/yourprofile"
+            class="social-icon instagram"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg viewBox="0 0 24 24">
+              <path
+                d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"
+              />
+            </svg>
+          </a>
+        </div>
       </div>
     </footer>
 
@@ -2187,9 +2239,8 @@
 
 
 
-      
 
-      let currentSlide_a = 0;
+       let currentSlide_a = 0;
       const totalSlides_a = 6;
       const slidesWrapper_a = document.querySelector(".slides-wrapper-a");
       const dots_a = document.querySelectorAll(".dot-a");
@@ -2234,11 +2285,6 @@
             }
         });
 
-
-
-      
-
-  
     </script>
   </body>
 </html>
