--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 2.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 2.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -852,7 +852,7 @@
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 3.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 3.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -868,7 +868,7 @@
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 4.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 4.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -884,7 +884,7 @@
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 5.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 5.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -894,13 +894,13 @@
         <div class="he-card">
           <img
             class="he-bg"
-            src="/images/HED Tab Open File/Higher Education-assets/Card 6.png"
+            src="/images/HED Tab Open File/Higher Education-assets/card 6.png"
             alt="Card Background"
           />
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 6.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 6.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -916,7 +916,7 @@
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 7.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 7.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -932,7 +932,7 @@
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 8.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 8.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -948,7 +948,7 @@
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 9.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 9.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -964,7 +964,7 @@
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 10.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 10.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -974,13 +974,13 @@
         <div class="he-card">
           <img
             class="he-bg"
-            src="/images/HED Tab Open File/Higher Education-assets/Card 11.png"
+            src="/images/HED Tab Open File/Higher Education-assets/card 11.png"
             alt="Card Background"
           />
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 11.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 11.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -996,7 +996,7 @@
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 12.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 12.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -1006,13 +1006,13 @@
         <div class="he-card">
           <img
             class="he-bg"
-            src="/images/HED Tab Open File/Higher Education-assets/Card 13.png"
+            src="/images/HED Tab Open File/Higher Education-assets/card 13.png"
             alt="Card Background"
           />
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 13.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 13.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -1022,13 +1022,13 @@
         <div class="he-card">
           <img
             class="he-bg"
-            src="/images/HED Tab Open File/Higher Education-assets/Card 14.png"
+            src="/images/HED Tab Open File/Higher Education-assets/card 14.png"
             alt="Card Background"
           />
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 14.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 14.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -1038,13 +1038,13 @@
         <div class="he-card">
           <img
             class="he-bg"
-            src="/images/HED Tab Open File/Higher Education-assets/Card 15.png"
+            src="/images/HED Tab Open File/Higher Education-assets/card 15.png"
             alt="Card Background"
           />
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 15.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 15.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -1054,13 +1054,13 @@
         <div class="he-card">
           <img
             class="he-bg"
-            src="/images/HED Tab Open File/Higher Education-assets/Card 16.png"
+            src="/images/HED Tab Open File/Higher Education-assets/card 16.png"
             alt="Card Background"
           />
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 16.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 16.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -1070,13 +1070,13 @@
         <div class="he-card">
           <img
             class="he-bg"
-            src="/images/HED Tab Open File/Higher Education-assets/Card 17.png"
+            src="/images/HED Tab Open File/Higher Education-assets/card 17.png"
             alt="Card Background"
           />
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 17.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 17.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -1086,13 +1086,13 @@
         <div class="he-card">
           <img
             class="he-bg"
-            src="/images/HED Tab Open File/Higher Education-assets/Card 18.png"
+            src="/images/HED Tab Open File/Higher Education-assets/card 18.png"
             alt="Card Background"
           />
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 18.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 18.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
@@ -1102,13 +1102,13 @@
         <div class="he-card">
           <img
             class="he-bg"
-            src="/images/HED Tab Open File/Higher Education-assets/Card 19.png"
+            src="/images/HED Tab Open File/Higher Education-assets/card 19.png"
             alt="Card Background"
           />
           <div class="he-content">
             <img
               class="he-icon"
-              src="/images/HED Tab Open File/Higher Education-assets/Icon 19.png"
+              src="/images/HED Tab Open File/Higher Education-assets/icon 19.png"
               alt="Icon"
             />
             <p class="he-text">Communications<br />Engineering</p>
